<resources>
    <string name="app_name">InstamarketApp</string>
    <string name="login">Enter</string>
    <string name="username">Instagram username</string>
    <string name="password">Password</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="adds_title">Adds</string>
    <string name="user_title">User</string>
    <string name="filters_title">Filters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incorrect_auth_data">Username or password is incorrect</string>
    <string name="user_icon">your user icon</string>
    <string name="country">Enter your country</string>
    <string name="profession">Enter your profession</string>
    <string name="add_logo">Add logo</string>
</resources>